added jdepend4eclipse to default root features

--- a/pom.xml
+++ b/pom.xml
@@ -629,122 +629,127 @@ Optional parameters:
 			</modules>
 		</profile>
 
-				<profile>
-					<id>e45-internal</id>
-					<properties>
-						<product.project.sts>org.springsource.sts.product.e4.5-internal</product.project.sts>
-						<p2.repository.name>SpringSource Tool Suite for Eclipse 4.5</p2.repository.name>
-						<groovy.compiler.feature>org.codehaus.groovy18.feature.feature.group</groovy.compiler.feature>
-						<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
-					</properties>
-					<repositories>
-						<repository>
-							<id>mars</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/releases/mars/</url>
-						</repository>
-						<repository>
-							<id>mars-updates</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/releases/maintenance/</url>
-						</repository>
-		<!--				<repository>
-							<id>platform</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
-						</repository> -->
-<!--						<repository>
-							<id>platform-m-builds</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
-						</repository> -->
+		<profile>
+			<id>e45-internal</id>
+			<properties>
+				<product.project.sts>org.springsource.sts.product.e4.5-internal</product.project.sts>
+				<p2.repository.name>SpringSource Tool Suite for Eclipse 4.5</p2.repository.name>
+				<groovy.compiler.feature>org.codehaus.groovy18.feature.feature.group</groovy.compiler.feature>
+				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
+			</properties>
+			<repositories>
+				<repository>
+					<id>mars</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/mars/</url>
+				</repository>
+				<repository>
+					<id>mars-updates</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/maintenance/</url>
+				</repository>
+				<!--				<repository>
+				<id>platform</id>
+				<layout>p2</layout>
+				<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
+				</repository> -->
+				<!--						<repository>
+				<id>platform-m-builds</id>
+				<layout>p2</layout>
+				<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
+				</repository> -->
 
-						<repository>
-							<id>orbit</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/tools/orbit/downloads/drops/M20150821153341/repository/</url>
-						</repository>
-						<repository>
-							<id>mylyn</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/mylyn/releases/latest</url>
-						</repository>
-						<repository>
-							<id>ajdt</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/tools/ajdt/45/dev/update</url>
-						</repository>
-						<repository>
-							<id>swtbot</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site/</url>
-						</repository>
-						<repository>
-							<id>groovy</id>
-							<layout>p2</layout>
-							<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.5/</url>
-						</repository>
-						<repository>
-							<id>atlassian</id>
-							<layout>p2</layout>
-							<url>http://update.atlassian.com/atlassian-eclipse-plugin/rest/e3.7</url>
-						</repository>
-						<repository>
-							<id>m2e-emergency-updates</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/technology/m2e/milestones/1.6/</url>
-						</repository>
-						<repository>
-							<id>maven-wtp</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/m2e-wtp/releases/mars</url>
-						</repository>
-						<repository>
-							<id>maven-extras-mirror</id>
-							<layout>p2</layout>
-							<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310-signed/</url>
-						</repository>
-						<repository>
-							<id>ajdt-m2e-configurator</id>
-							<layout>p2</layout>
-							<url>http://dist.springsource.org/release/AJDT/configurator-v2/</url>
-						</repository>
-						<repository>
-							<id>maven-egit</id>
-							<layout>p2</layout>
-							<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201504071521/</url>
-						</repository>
-						<repository>
-							<id>maven-wro4j</id>
-							<layout>p2</layout>
-							<url>http://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
-						</repository>
-						<repository>
-							<id>maven-devtools</id>
-							<layout>p2</layout>
-							<url>http://dist.springsource.com/release/TOOLS/mavendevtools/</url>
-						</repository>
-						<repository>
-							<id>maven-dependency-support</id>
-							<layout>p2</layout>
-							<url>http://ianbrandt.github.io/m2e-maven-dependency-plugin/</url>
-						</repository>
-						<repository>
-							<id>eclipse-integration-commons</id>
-							<layout>p2</layout>
-							<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}/e4.4/</url>
-						</repository>
-						<repository>
-							<id>cloudfoundry-eclipse</id>
-							<layout>p2</layout>
-							<url>http://dist.springsource.com/release/TOOLS/cloudfoundry/1.8.3</url>
-						</repository>
-					</repositories>
-					<modules>
-						<module>features/org.springsource.sts.package.e4.5-internal</module>
-						<module>features/org.springsource.sts.product.e4.5-internal</module>
-					</modules>
-				</profile>
+				<repository>
+					<id>orbit</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/M20150821153341/repository/</url>
+				</repository>
+				<repository>
+					<id>mylyn</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/mylyn/releases/latest</url>
+				</repository>
+				<repository>
+					<id>ajdt</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/tools/ajdt/45/dev/update</url>
+				</repository>
+				<repository>
+					<id>swtbot</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site/</url>
+				</repository>
+				<repository>
+					<id>groovy</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.5/</url>
+				</repository>
+				<repository>
+					<id>atlassian</id>
+					<layout>p2</layout>
+					<url>http://update.atlassian.com/atlassian-eclipse-plugin/rest/e3.7</url>
+				</repository>
+				<repository>
+					<id>m2e-emergency-updates</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/m2e/milestones/1.6/</url>
+				</repository>
+				<repository>
+					<id>maven-wtp</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/m2e-wtp/releases/mars</url>
+				</repository>
+				<repository>
+					<id>maven-extras-mirror</id>
+					<layout>p2</layout>
+					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310-signed/</url>
+				</repository>
+				<repository>
+					<id>ajdt-m2e-configurator</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.org/release/AJDT/configurator-v2/</url>
+				</repository>
+				<repository>
+					<id>maven-egit</id>
+					<layout>p2</layout>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201504071521/</url>
+				</repository>
+				<repository>
+					<id>maven-wro4j</id>
+					<layout>p2</layout>
+					<url>http://download.jboss.org/jbosstools/updates/m2e-wro4j/</url>
+				</repository>
+				<repository>
+					<id>maven-devtools</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.com/release/TOOLS/mavendevtools/</url>
+				</repository>
+				<repository>
+					<id>maven-dependency-support</id>
+					<layout>p2</layout>
+					<url>http://ianbrandt.github.io/m2e-maven-dependency-plugin/</url>
+				</repository>
+				<repository>
+					<id>eclipse-integration-commons</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}/e4.4/</url>
+				</repository>
+				<repository>
+					<id>cloudfoundry-eclipse</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.com/release/TOOLS/cloudfoundry/1.8.3</url>
+				</repository>
+				<repository>
+					<id>jdepend-eclipse</id>
+					<layout>p2</layout>
+					<url>http://andrei.gmxhome.de/eclipse/</url>
+				</repository>
+			</repositories>
+			<modules>
+				<module>features/org.springsource.sts.package.e4.5-internal</module>
+				<module>features/org.springsource.sts.product.e4.5-internal</module>
+			</modules>
+		</profile>
 
 		<profile>
 			<id>spring-site</id>
