--- a/pom.xml
+++ b/pom.xml
@@ -722,7 +722,7 @@ Optional parameters:
 				<repository>
 					<id>cloudfoundry-eclipse</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.com/release/TOOLS/cloudfoundry/1.8.3</url>
+					<url>http://download.springsource.com/release/TOOLS/cft/1.0.0.M2</url>
 				</repository>
 				<repository>
 					<id>jdepend-eclipse</id>
