enable early mars maintenance-builds for testing

--- a/pom.xml
+++ b/pom.xml
@@ -531,11 +531,16 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
 				</repository> -->
-<!--				<repository>
+				<repository>
 					<id>platform-m-builds</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
-				</repository> -->
+				</repository>
+				<repository>
+					<id>mars-maintenance</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/maintenance/</url>
+				</repository>
 
 				<repository>
 					<id>orbit</id>
@@ -643,11 +648,16 @@ Optional parameters:
 				<layout>p2</layout>
 				<url>http://download.eclipse.org/eclipse/updates/4.5/</url>
 				</repository> -->
-				<!--						<repository>
-				<id>platform-m-builds</id>
-				<layout>p2</layout>
-				<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
-				</repository> -->
+				<repository>
+					<id>platform-m-builds</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/eclipse/updates/4.5-M-builds/</url>
+				</repository>
+				<repository>
+					<id>mars-maintenance</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/maintenance/</url>
+				</repository>
 
 				<repository>
 					<id>orbit</id>
