--- a/pom.xml
+++ b/pom.xml
@@ -615,7 +615,7 @@ Optional parameters:
 				<repository>
 					<id>cloudfoundry-eclipse</id>
 					<layout>p2</layout>
-					<url>http://download.springsource.com/release/TOOLS/cft/1.0.0.M2</url>
+					<url>http://download.eclipse.org/cft/1.0.M3/</url>
 				</repository>
 				<repository>
 					<id>cupertino-theme</id>
@@ -737,7 +737,7 @@ Optional parameters:
 				<repository>
 					<id>cloudfoundry-eclipse</id>
 					<layout>p2</layout>
-					<url>http://download.springsource.com/release/TOOLS/cft/1.0.0.M2</url>
+					<url>http://download.eclipse.org/cft/1.0.M3/</url>
 				</repository>
 				<repository>
 					<id>jdepend-eclipse</id>
@@ -864,7 +864,7 @@ Optional parameters:
 				<repository>
 					<id>cloudfoundry-eclipse</id>
 					<layout>p2</layout>
-					<url>http://download.springsource.com/release/TOOLS/cft/1.0.0.M2</url>
+					<url>http://download.eclipse.org/cft/1.0.M3/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
