Added feature and plugin modules for cft branding to parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,9 @@ Optional parameters:
 
 	<modules>
 		<module>plugins/org.springsource.sts</module>
+		<module>plugins/org.springsource.sts.cft.branding</module>
 		<module>features/org.springsource.sts</module>
+		<module>features/org.springsource.sts.cft</module>
 	</modules>
 
 	<profiles>
