--- a/pom.xml
+++ b/pom.xml
@@ -601,7 +601,7 @@ Optional parameters:
 				<repository>
 					<id>cloudfoundry-eclipse</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.M7/</url>
+					<url>http://download.eclipse.org/cft/1.0.RC1/</url>
 				</repository>
 				<repository>
 					<id>cupertino-theme</id>
@@ -707,7 +707,7 @@ Optional parameters:
 				<repository>
 					<id>cloudfoundry-eclipse</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.M7/</url>
+					<url>http://download.eclipse.org/cft/1.0.RC1/</url>
 				</repository>
 				<repository>
 					<id>jdepend-eclipse</id>
@@ -832,11 +832,6 @@ Optional parameters:
 					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</url>
 				</repository>
 				<repository>
-					<id>cloudfoundry-eclipse</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.M7/</url>
-				</repository>
-				<repository>
 					<id>ansi-console</id>
 					<layout>p2</layout>
 					<url>http://www.mihai-nita.net/eclipse</url>
@@ -937,11 +932,6 @@ Optional parameters:
 					<id>eclipse-integration-commons</id>
 					<layout>p2</layout>
 					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</url>
-				</repository>
-				<repository>
-					<id>cloudfoundry-eclipse</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.M7/</url>
 				</repository>
 				<repository>
 					<id>jdepend-eclipse</id>
