--- a/plugins/org.springsource.sts/plugin_customization.ini
+++ b/plugins/org.springsource.sts/plugin_customization.ini
@@ -38,18 +38,20 @@ com.atlassian.connector.eclipse.monitor.ui/com.atlassian.connector.eclipse.monit
 # Disable Mylyn service message
 org.eclipse.mylyn.tasks.ui/org.eclipse.mylyn.tasks.ui.servicemessage.id=0
 
+# check for updates every Tuesday at 10am
 # automatic update options are defined in org.eclipse.equinox.p2.sdk.scheduler.PreferenceConstants
-# check for updates on startup
 org.eclipse.equinox.p2.ui.sdk.scheduler/enabled=true
-org.eclipse.equinox.p2.ui.sdk.scheduler/schedule=on-startup
+org.eclipse.equinox.p2.ui.sdk.scheduler/schedule=on-schedule
+org.eclipse.equinox.p2.ui.sdk.scheduler/day=Every Tuesday
+org.eclipse.equinox.p2.ui.sdk.scheduler/hour=10\:00 AM
 
-# remind the user every 4 hours
+# remind the user every 24 hours
 org.eclipse.equinox.p2.ui.sdk.scheduler/remindOnSchedule=true
 # see AutomaticUpdatesPopup, values can be "30 minutes", "Hour", "4 Hours"
-org.eclipse.equinox.p2.ui.sdk.scheduler/remindElapsedTime=4 Hours
+org.eclipse.equinox.p2.ui.sdk.scheduler/remindElapsedTime=24 Hours
 
 # download updates before notifying the user
-org.eclipse.equinox.p2.ui.sdk.scheduler/download=true
+org.eclipse.equinox.p2.ui.sdk.scheduler/download=false
 
 # disable the Oomph preference recorder - bug 470430
 # https://bugs.eclipse.org/bugs/show_bug.cgi?id=470430
