updated cft to 1.0.1.M2

--- a/pom.xml
+++ b/pom.xml
@@ -601,7 +601,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.1.M1/</url>
+					<url>http://download.eclipse.org/cft/1.0.1.M2/</url>
 				</repository>
 				<repository>
 					<id>cupertino-theme</id>
@@ -705,9 +705,9 @@ Optional parameters:
 					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</url>
 				</repository>
 				<repository>
-					<id>cloudfoundry-eclipse</id>
+					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.RC1/</url>
+					<url>http://download.eclipse.org/cft/1.0.1.M2/</url>
 				</repository>
 				<repository>
 					<id>jdepend-eclipse</id>
@@ -834,7 +834,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.1.M1/</url>
+					<url>http://download.eclipse.org/cft/1.0.1.M2/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
@@ -946,7 +946,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.1.M1/</url>
+					<url>http://download.eclipse.org/cft/1.0.1.M2/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
