--- a/pom.xml
+++ b/pom.xml
@@ -760,7 +760,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.6-I-builds/I20160308-0800</url>
 				</repository> -->
-
+				<repository>
+					<id>staging</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/staging/neon/</url>
+				</repository>
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
