--- a/pom.xml
+++ b/pom.xml
@@ -750,6 +750,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/neon/</url>
 				</repository>
+				<repository>
+					<id>mpc-fix</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/mpc/releases/1.5.1a/</url>
+				</repository>
 <!--				<repository>
 					<id>platform</id>
 					<layout>p2</layout>
@@ -760,11 +765,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.6-I-builds/I20160308-0800</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>staging</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/staging/neon/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
@@ -798,7 +803,7 @@ Optional parameters:
 				<repository>
 					<id>maven-wtp</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/m2e-wtp/releases/mars</url>
+					<url>http://download.eclipse.org/m2e-wtp/releases/neon</url>
 				</repository>
 				<repository>
 					<id>maven-extras-mirror</id>
@@ -813,7 +818,7 @@ Optional parameters:
 				<repository>
 					<id>maven-egit</id>
 					<layout>p2</layout>
-					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201504071521/</url>
+					<url>http://repo1.maven.org/maven2/.m2e/connectors/m2eclipse-egit/0.14.0/N/0.14.0.201509090157/</url>
 				</repository>
 				<repository>
 					<id>maven-wro4j</id>
@@ -838,7 +843,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.1.M2/</url>
+					<url>http://download.eclipse.org/cft/1.0.1/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
