--- a/pom.xml
+++ b/pom.xml
@@ -773,7 +773,7 @@ Optional parameters:
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20160520211859/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20170307180635/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
@@ -843,7 +843,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.2/</url>
+					<url>http://download.eclipse.org/cft/1.0.3/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
@@ -879,7 +879,7 @@ Optional parameters:
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20161205183421/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20170306214312/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
@@ -949,7 +949,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.2/</url>
+					<url>http://download.eclipse.org/cft/1.1.0.M6/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
