--- a/releng/org.springsource.sts.distribution-bundles.e45/pom.xml
+++ b/releng/org.springsource.sts.distribution-bundles.e45/pom.xml
@@ -138,7 +138,7 @@
 								<replace file="../../common/html/sts-nightly-${dist.target.major}.html" token="@MAJOR-TARGET@" value="${dist.target.major}" summary="yes" />
 								<replace file="../../common/html/sts-nightly-${dist.target.major}.html" token="@VARIANT@" value="spring" summary="yes" />
 
-								<s3 accessKey="${accessKey}" secretKey="${secretKey}">
+								<s3 accessKey="${dist.accessKey}" secretKey="${dist.secretKey}">
 									<upload bucketName="${dist.bucket}" file="../../common/html/sts-nightly-${dist.target.major}.html"
 										toFile="snapshot/STS/sts-nightly-${dist.target.major}.html" publicRead="true">
 									</upload>
