--- a/pom.xml
+++ b/pom.xml
@@ -750,11 +750,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/neon/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>mpc-fix</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/mpc/releases/1.5.1a/</url>
-				</repository>
+				</repository> -->
 <!--				<repository>
 					<id>platform</id>
 					<layout>p2</layout>
@@ -765,11 +765,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.6-I-builds/I20160308-0800</url>
 				</repository> -->
-				<repository>
+<!--				<repository>
 					<id>staging</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/staging/neon/</url>
-				</repository>
+				</repository> -->
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
