--- a/pom.xml
+++ b/pom.xml
@@ -876,6 +876,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.7/</url>
 				</repository>
+
+				<!-- newer platform build to include fix for bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=514149 -->
+				<repository>
+					<id>i-builds</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/eclipse/updates/4.7-I-builds/I20170328-2000/</url>
+				</repository>
+
+
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
