--- a/pom.xml
+++ b/pom.xml
@@ -843,7 +843,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.0.3/</url>
+					<url>http://download.eclipse.org/cft/1.1.0.RC2/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
@@ -957,7 +957,7 @@ Optional parameters:
 				<repository>
 					<id>latest-cft</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/cft/1.1.0.M7/</url>
+					<url>http://download.eclipse.org/cft/1.1.0.RC2/</url>
 				</repository>
 				<repository>
 					<id>ansi-console</id>
