--- a/pom.xml
+++ b/pom.xml
@@ -877,22 +877,19 @@ Optional parameters:
 					<url>http://download.eclipse.org/releases/oxygen/</url>
 				</repository>
 				<repository>
+					<id>oxygen-staging</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/staging/oxygen</url>
+				</repository>
+				<repository>
 					<id>platform</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/4.7/</url>
 				</repository>
-
-				<!-- newer platform build to include fix for bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=514149 -->
-				<repository>
-					<id>oxygen-i-builds</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/eclipse/updates/4.7-I-builds/</url>
-				</repository>
-
 				<repository>
 					<id>orbit</id>
 					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20170505151127/repository/</url>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20170516192513/repository/</url>
 				</repository>
 				<repository>
 					<id>mylyn</id>
