--- a/pom.xml
+++ b/pom.xml
@@ -855,6 +855,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
 				</repository>
+				<repository>
+					<id>lsp4e</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
+				</repository>
 			</repositories>
 			<modules>
 				<module>features/org.springsource.sts.package.e4.6</module>
@@ -966,6 +971,11 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/modeling/tmf/xtext/updates/milestones/</url>
 				</repository>
+				<repository>
+					<id>lsp4e</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/lsp4e/snapshots/</url>
+				</repository>
 			</repositories>
 			<modules>
 				<module>features/org.springsource.sts.package.e4.7</module>
@@ -1011,6 +1021,11 @@ Optional parameters:
 			<id>eclipse-integration-gradle</id>
 			<layout>p2</layout>
 			<url>http://dist.springsource.com/${dist.type}/TOOLS/gradle/${dist.eclipse-integration-gradle-version}</url>
+		</repository>
+		<repository>
+			<id>sts4-language-servers</id>
+			<layout>p2</layout>
+			<url>http://dist.springsource.com/snapshot/TOOLS/sts4-language-servers/nightly/</url>
 		</repository>
 		<repository>
 			<id>egit</id>
